--- a/dagengren/story/227.html
+++ b/dagengren/story/227.html
@@ -401,8 +401,8 @@ Inspector Zhang struggled to stand, weak as he was, but he stood firmly, bowing 
 
 They couldn't see what was happening outside, but amidst the sounds of crossbows firing, weapons clashing, and chaotic shouts, a young, impassioned chant reached them:
 
-*“A young man’s heroism, brings the valiant from five capitals!*   
-“*With loyal heart, with just hand. With words of iron, life or death!*    
+*A young man’s valour, brings heroes from five capitals old!*     
+“*With loyal heart, with just hand. With words of iron, life or death,*    
 “*A promise is worth a thousand tons of gold!*”
 
 …..
@@ -543,9 +543,9 @@ But what he saw was only a broken human form, covered in arrows and knife wounds
 
 Inexplicably, he heard the young man's final chant in his ears:
 
-*A young man’s heroism, brings the valiant from five capitals!*
+*A young man’s valour, brings heroes from five capitals old!*   
 
-*With loyal heart, with just hand. With words of iron, life or death!*
+*With loyal heart, with just hand. With words of iron, life or death,*
 
 *A promise is worth a thousand tons of gold!*
 
