--- a/dagengren/story/227.html
+++ b/dagengren/story/227.html
@@ -417,7 +417,7 @@ The rebels were mostly ordinary people, with a few Refining Vitality experts. Fo
 
 But the endless waves of enemies, coupled with his poor state, wore him down. After slaying dozens, Xu Qi'an became exhausted, his stomach churned, and his arms went numb.
 
-The most troublesome were the crossbows, their dense volleys impossible to block with a single knife.
+The most troublesome were the crossbows, their dense volleys impossible to block with a single blade.
 
 Fortunately, the magic bronze gong on his chest protected him from most attacks, leaving the rest to his reflexes.
 
@@ -539,7 +539,7 @@ The centurion suddenly felt evasive, not daring to meet their eyes, filled with 
 
 Inspector Zhang stumbled out of the hall, crossed the courtyard, and came to Xu Qi'an.
 
-But what he saw was only a broken human form, covered in arrows and knife wounds, without any sign of life.
+But what he saw was only a broken human form, covered in arrows and blade wounds, without any sign of life.
 
 Inexplicably, he heard the young man's final chant in his ears:
 
