--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -324,6 +324,7 @@
         <li><a href="./story/225.html">Xu Qi'an's Helpless Choice</a></li>
         <li><a href="./story/226.html">Come the Warlock of Dreams</a></li>
         <li><a href="./story/227.html">The Sacrifice (Triple Length)</a></li>
+        <li><a href="./story/228.html">On the Day of Spring (Triple Length)</a></li>
     </ol>
 
     <hr>
