dgr 130 juan 1 zhong

--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -325,6 +325,8 @@
         <li><a href="./story/226.html">Come the Warlock of Dreams</a></li>
         <li><a href="./story/227.html">The Sacrifice (Triple Length)</a></li>
         <li><a href="./story/228.html">On the Day of Spring (Triple Length)</a></li>
+        <li><a href="./story/229.html">Replies to Letters</a></li>
+        <li><a href="./story/230.html">Compensation (End of Volume)</a></li>
     </ol>
 
     <hr>
