--- a/baoyu/story/13.html
+++ b/baoyu/story/13.html
@@ -81,7 +81,7 @@
 
 「慕容师祖，」一个弟子问向惟一一个在甲板上的慕容师祖，「我们到哪儿了？」
 
-慕容师祖正在阅读某本古籍，有点不奈烦地看向那个师孙，但还是直接回答他的问题：「按飞行速度，我们到南原了。以旧日说法，我们正在键岸郡，一时辰前过了千岛与键岸的边界。」
+慕容师祖正在阅读某本古籍，有点不奈烦地看向那个师孙，但还是直接回答他的问题：「按飞行速度，我们到南原了。以旧日说法，我们正在键岸郡，一时辰前过了江岛与键岸的边界。」
 
 虽然这些什么什么郡他们都不懂，毕竟「郡」这个词已经没人用了，可南原却是知道的。
 
