--- a/baoyu/story/37.html
+++ b/baoyu/story/37.html
@@ -67,9 +67,9 @@
 
 「哦。是的，师祖——师傅……海关是什么？」
 
-「国度必治其境，控制人民的出入，防备魔教间谍、邪恶人犯等。只是海是宗门更古老，没用其法，但哪个宗门会让外人随便上自己的岛屿？这是类似的。
+「国必治其境，制人之出入，防魔徒邪犯等。东海宗门争霸，并无此法，可宗门的令牌禁法，不亦控制人流，异曲同工乎？
 
-「当然通常贫道能随意飞入出，可要让你见到旧世，必随凡人同行。」
+「当然通常以贫道的身份，能随意飞入出，可要让你见到旧世，必随凡人同行。」
 
 两人未受骚扰地靠近海岸，这里有个巨大的港口，码头数不胜数，有好几艘船停泊于此，岸上人影密密麻麻，喧闹无比。每个码头上都立着一队兵士，胡贞能看到他们皆有炼气一层左右的修为，不足以抵抗大修士，但足以用法力。
 
@@ -87,7 +87,7 @@
 
 「无妨，无妨……」许鳞漂漂然离去，身后带着一个迷茫的胡贞。
 
-李国海关是一个大厅子，屋檐十丈高，宽长数十丈，甚是宏大，上面有个匾额书：「大李王国北城海关」，旁边有个花纹徽，数朵梨花下两锚交差，锚链围绕着花枝，便是大李王国镇海卫的徽章。
+李国海关是一个大厅子，屋檐十丈高，宽长数十丈，甚是宏大，上面有个匾额书：「大李王国北邑海关」，旁边有个花纹徽，数朵梨花下两锚交差，锚链围绕着花枝，便是大李王国镇海卫的徽章。
 
 虽码头上很繁忙，并没有多少人要入境，毕竟很多海民没能力远行，李国在星海上也比较偏僻。
 
@@ -99,13 +99,13 @@
 
 哐！一声，有两个硬硬的物体从书中坠落，落在他的桌子上。
 
-「嗯？」关员愣了一下，仔细看向那两个东西，发现是两块黑玉，一面有个「星」字，另一面刻着「玄武」，脸色稍微一白。身为海关人员，他岂能不识得海外宗府的篆书令？而黑玉玄武令，是星宗玄武府独有的令牌，外宗为了不惹着玄武府，根本就不用黑玉。
+「嗯？」关员愣了一下，仔细看向那两个东西，发现是两块黑玉，一面有个「星」字，另一面刻着「玄武」，脸色稍微一白。身为海关官员，他岂能不识得海外宗府的篆书令？而黑玉玄武令，是星宗玄武府独有的令牌，外宗为了不惹着玄武府，根本就不用黑玉。
 
 可即使有玄武令，说明他面前的白衣道士及他的蓝衣弟子都是非常厉害的人，不是他这种凡俗匹夫能触及的级别。最好让他们赶紧过去，免得让这两位前辈生气。
 
 关员很快将令牌收进那本绿色的户籍书，默不作声地还给许鳞：「欢迎返李，两位道长请。」
 
-「多谢。」许鳞笑眯眯道，领着胡贞便去了。过了几息，关员回首看了下两人的背景，心有余悸，稍微冷静了一下才叫道：「下一个人！」
+「多谢。」许鳞笑眯眯道，领着胡贞便去了。过了几息，官员回首看了下两人的背景，心有余悸，稍微冷静了一下才叫道：「下一个人！」
 
 ……
 
@@ -121,9 +121,11 @@
 
 「哦是，师……傅。」胡贞并不知道一个列车站是什么，只能乖乖地喊一声，然后小跑跟上许鳞。
 
-没走几步，前方忽然出现了个大广场，广场地面上那铁槽横穿，分成数道，胡贞见广场内数驾四匹马拉的奇异马车，那些马车奇大，竟有两层，车内排排木椅，能乘坐十余人，巨型铁轮插在铁槽里。每辆马车上都以各色油漆刷着个大数字，有「壹」、「贰」、「肆」、「陆」四号。广场边有栋石楼，仅仅一层高但十余丈宽，如一村之会馆。屋顶上立着一个大匾额，上书：「【壹贰肆陆】李北港站」。
+没走几步，前方忽然出现了个大广场，广场地面上那铁槽横穿，分成数道，胡贞见广场内数驾四匹马拉的奇异马车，那些马车奇大，竟有两层，车内排排木椅，能乘坐十余人，巨型铁轮插在铁槽里。每辆马车上都以各色油漆刷着不同颜色，有不同的标签。广场边有栋石楼，仅仅一层高但十余丈宽，如一村之会馆。屋顶上立着一个大匾额，上书：「李北港站」。
 
-许鳞没停留，直接带胡贞走向前方刷着「壹」号的马车。
+其下又以五色写了五个词：「关海线、国王线、唐墉线、方里线、过河线」
+
+许鳞没停留，直接带胡贞走向前方刷着「关海线」的马车。
 
 「师……傅，这是什么啊？」胡贞满脸迷茫。
 
@@ -133,7 +135,7 @@
 
 胡贞听得似懂非懂，毕竟他见过的最大的村庄不过数百人，不过一两里宽长，不需要什么『公共交通』系统，可想一想李北城三百万人口的可怕数目，国家能建一些系统让普通贫民也能穿城，是很明智的。
 
-许鳞领他来到一号马车前，登上车。车门在马车前方，旁边就坐着驾马的司机，隔着一个小台子。司机看了眼许鳞，笑道：「道长今天要去哪里啊？」
+许鳞领他来到关海线马车前，登上车。车门在马车前方，旁边就坐着驾马的司机，隔着一个小台子。司机看了眼许鳞，笑道：「道长今天要去哪里啊？」
 
 许鳞回笑，温和道：「贫道要去奥君路，那是我徒弟，跟着我的。」
 
@@ -157,7 +159,7 @@
 
 当他们来到了「奥君路」，这个车站牌也是双语的，结构如下：
 
-> 路 君 奧【壹】    
+> 路 君 奧【綫海關】    
 > AUGUSTUS ROAD
 
 -----
@@ -165,6 +167,8 @@
 章尾略语：想必贵读者已知西夷多貌欧州，故若东州中原以汉语为话，山外古国则以英、法、俄等各言表之。
 
 [^1]: 平声    
+
+
 
 
 
