--- a/baoyu/story/38.html
+++ b/baoyu/story/38.html
@@ -115,7 +115,7 @@
 
 老西夷人道：「两位道长好，在下是鄙堂的现任神父，阿利斯泰尔·特洛里。未曾见道长光临鄙庙，敢问贵号？」他的口音完全像李国本土人的，胡贞之前所见过的唯一一个西夷人可是司徒建，而司徒建明显不像是他们中州人氏。
 
-许鳞笑道：「见过阿利斯泰尔神父，贫道白翼，老竹村月星庙出师。这是我的徒弟，姓胡名贞，是海外人，不太懂事，敬请见谅。」
+许鳞笑道：「见过阿利斯泰尔神父，贫道白翼，老竹村月星庙出师。这是我的徒弟，姓胡名贞，是海外人，不太懂事，神父请别见怪。」
 
 胡贞的脸一下子呆滞。
 
