--- a/baoyu/story/39.html
+++ b/baoyu/story/39.html
@@ -88,7 +88,7 @@
 
 「毕竟不少业务皆须一点点法力，且仅须一点点。」
 
-竟还有这样的人……胡贞暗叹。家乡里你若能修炼，就拼命修，因为这很可能会救你一条命。但在东海上，星尊的保护下，能过个正常的日子，这样子干也不差。
+竟还有这样的人……胡贞暗叹。家乡里你若能修炼，就拼命修，不能停留，因为这很可能会救你一条命。但在东海上，星尊的保护下，能过个正常的日子，这样子干也不差。
 
 胡贞心中还在酝酿着许鳞刚说的话， 只闻这白衣道士又开口道：
 
@@ -102,7 +102,7 @@
 
 虽然只是热水散发的雾气，可蒸汽中火力之暴躁，即使半盖而烧也很容易随机爆炸，导致重伤。
 
-胡贞家里的锅盖，算不上真正的盖子，仅仅是木条网格，可这就够蒸食物了。若把水放在一个铁箱子里坐在那儿烧着，妄想用来驱动什么机械，这简直是要死。
+胡贞家里的锅盖，算不上真正的盖子，仅仅是木条网格，可这就够蒸食物了。若把水放在一个铁箱子里坐在那儿烧着，妄想用来驱动什么机械，这简直是作死。
 
 怎么能用蒸汽呢？
 
@@ -122,7 +122,7 @@
 
 片刻后，列车缓缓启行，渐渐出站，慢速离开李北城。离开城区，进入连连峦山，山上田野成阶，胡贞忽然感觉车速骤增，无声无息地从一倍马速到了三倍，除了咯噔咯噔的铁轮声、车厢摇晃的咯吱声，列车本体没发出任何声音，就像一个行于地上的穿行法器。
 
-这时有个清朗的声音在车厢内响起：「欢迎乘客乘坐本次列车。本次列车是未正三十分钟由李北开往李南的高速列车，中途停靠汉新、老竹村、晔邑站。全程预计一时六刻三分。下一站是汉新，大约两刻钟到达。」
+这时有个清朗的声音在车厢内响起：「欢迎乘客乘坐本次列车。本次列车是未正三十分钟由李北开往李南的高速列车，途径汉新、老竹村、晔邑、及李南站。全程预计一时六刻三分。下一站是汉新，大约两刻钟到达。」
 
 胡贞双目左右扫，试图看到是谁说的。许鳞手持白扇，正悠然扇着自己，此时用之戳了胡贞一下：「投音术，雕虫小技，你学个一两天也能会的。我们大概半时就到。」
 
@@ -139,9 +139,7 @@
 ---
 
 [^1]: 地名，读若「伴泊」古同作。
-
-
-    
+ 
 </div>
 
 <div class="double" id="footer">
