--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -81,6 +81,9 @@
         <li><a href="./story/36.html">【许白翼】</a></li>
         <li><a href="./story/37.html">【旧世都】</a></li>
         <li><a href="./story/38.html">【莫忘之过】</a></li>
+        <li><a href="./story/39.html">【老竹村】</a></li>
+        <li><a href="./story/40.html">【再见谢颜】</a></li>
+        <li><a href="./story/41.html">【金表】</a></li>
     </ol>
 
 </div>
