--- a/baoyu/story/33.html
+++ b/baoyu/story/33.html
@@ -36,7 +36,7 @@
 
 每次昌来进去时，他的父亲就会很焦虑，担心他破坏了什么，或者伤到了自己，所以大多时昌来只能坐着看他的父亲工作，时不时也会有客人进来买表，或拿着自己的金表请昌择修复，其中一小半都是西夷人。虽然买者较少，但一旦成交，拿到手的钱多得可怕，客人们或直接以白银支付，或用日安帝国的「金皇冠」货币。
 
-虽然昌来没有直接说，但从上下文阳忠渐渐看出金表一种能握在手里的小型机械物品，而一旦设好，能精准地指出时间，一日甚至数日不偏分毫。阳忠只能惊叹，能做到这些的，已经要是炼金术士是的宗师了，即使伟大的星府中也见不到这种玩意，而昌来及他的家人，明明都是凡人。他又思索这本书到底是谁写的，能如此精确地描述一个完全不同的世界，文字又如此简洁，但似乎能让阳忠心里能看到昌来的所见所闻。
+虽然昌来没有直接说，但从上下文阳忠渐渐看出，金表是一种能握在手里的小型机械物品，而一旦设好，能精准地指出时间，一日甚至数日不偏分毫。阳忠只能惊叹，能做到这些的，已经要是炼金术士是的宗师了，即使伟大的星府中也见不到这种玩意，而昌来及他的家人，明明都是凡人。他又思索这本书到底是谁写的，能如此精确地描述一个完全不同的世界，文字又如此简洁，但似乎能让阳忠心里能看到昌来的所见所闻。
 
 通常昌来只能坐在凳子上，但毕竟是个三四岁的小孩，他一直摇来摇去，且口中的问题连绵不绝。昌择到是个很温顺，很有耐心的人，小昌来问什么，父亲就回答，解释每一个部件，每一个齿轮、铆钉、弹簧的用处。昌来听得似懂非懂，故书中词语也含糊不清，可依旧勾勒出一个鲜活的场景，阳忠甚至感觉自己能亲自听见昌择的话，受这位三四十来岁的表匠的教导。
 
