--- a/shxt/saga/1.html
+++ b/shxt/saga/1.html
@@ -32,7 +32,7 @@
             此傳龍族古詩以說至尊福生雨神之来。
         </blockquote>
         <p>
-            自日灼之地，以曦神之恩，在霧繞深山，雙龍神生於凡之民。其目火紅如旭；其鱗湛藍如海。在日灼之地，湯湯洪水滔天，降灾，引饑，使亡。世间无則，人難以生，龍神觀之而嘆，民生之艱。曦神之威，謂天之力，偉偉神法，宿雙龍之氣。世間之亂，其不可堪，因命己曰，護人鎮難。雙首仰，敕浩天，命風靜，命雨緩。天和人慶，可奉言入他之耳，引他之怒。混沌安神之暴，振地燃天，金帝之下，皆必顫顛！誰半神者，誰伴法者，敢亂其世，敢鄙其制？其欲撕之成萬碎，可神血不可易，于是分之百萬里，永去而永離。然天地之間，有平衡立，風雨斂其暴，去人而息。
+            自日灼之地，以曦神之恩，在霧繞深山，雙龍神生於凡之民。其目火紅如旭；其鱗湛藍如海。在日灼之地，湯湯洪水滔天，降災，引饑，使亡。世间無則，人難以生，龍神觀之而嘆，民生之艱。曦神之威，謂天之力，偉偉神法，宿雙龍之氣。世間之亂，其不可堪，因立誓曰，護人鎮難。雙首仰，敕浩天，命風靜，命雨緩。天和人慶，可奉言入他之耳，引他之怒。混沌暥神之暴，震地燃天，金帝之下，皆必顫顛！誰半神者，誰伴法者，敢亂其世，敢鄙其制？其欲撕之成萬碎，可自血不可易，於是分之百萬里，永去而永離。然天地之間，有平衡立，風雨斂其暴，去人而息。
         </p>
     </div>
     <!-- </div> -->
