--- a/shxt/saga/2.html
+++ b/shxt/saga/2.html
@@ -26,18 +26,18 @@
     <h2>歷公之字第二</h2>
 
     <blockquote>
-        本談說古苗諸國之湳。湳歷公即湳之次末君，生於苗之末，距大燕统天下不過數百年餘。（湳讀若南）
+        本談說古苗諸國之湳。〔湳讀若南〕湳歷公湳之次末君也，生於苗之末，距大燕統天下不過數百歲餘。
     </blockquote>
 
     <p>
-        湳歷公之子名曰祁。祁孝父親民，受衆愛。公重寵之。中原癘，祁外與民，病而返。大夫、道士無能医。秋，祁死，歷公泣三日三夜，欲複其生，圖萬法而不成；夫之逆天，仙不知魔不敢。於是公徒八千里之燕，陟聖山代往神泉。詩云：
+        湳歷公之子名曰祁。祁孝父親民，受衆愛。公重寵之。中原癘，祁外與民，病而反。大夫、道士無能醫。秋，祁死，歷公泣三日三夜，欲複其生，圖萬法而不成；夫之逆天，仙不知魔不敢。於是公徒八千里之燕，陟聖山代往神泉。詩云：
     </p>
     <blockquote>
         萬丈神山春绿久，無垠大地鳥龍遊。<br>
 一珠澈水天泉内，映照湳公腹裏愁。
     </blockquote>
     <p>
-        回首入泉洞，内有清池，徑八十又八丈。公匍匐求曰：「福生雨神，愛萬物之天尊！小人求尊，我兒生而善，愛父愛民，國癘，兒助民，無故中疾。願奉所有，請尊復其生。」久不聲，忽然風起，池上現道尊，面祥和，目青如海，懾如龍。尊對曰：「夫死弗生。」公又求。回曰「爾子德高入天，天規亡勿返也。允爾末次望之，惟勿敢近。」公曰可。遂池中現祁之影，在湖中舟，惬然而渔，面笑目父。公忘神戒近池，觸之而畫碎，凄呼，烟消雲散。公不聽神而魄散。湳無君而亂，滅於鄰邦。
+        回首入泉洞，内有清池，徑八十又八丈。公匍匐求曰：「福生雨神，愛萬物之天尊！小人求尊，我兒生而善，愛父愛民，國癘，兒助民，無故中疾。願奉所有，請尊複其生。」久不聲，忽然風起，池上現道尊，面祥和，目青如海，懾如龍。尊對曰：「夫死弗生。」公又求。回曰「爾子德高入天，天規亡勿返也。允爾末次望之，惟勿敢近。」公曰可。遂池中現祁之影，在湖中舟，惬然而渔，面笑目父。公忘神戒近池，觸之而畫碎，凄呼，煙消雲散。公不聽神而魄散。湳無君而亂，滅於鄰邦。
     </p>
     </div>
 
