--- a/shxt/saga/4.html
+++ b/shxt/saga/4.html
@@ -25,7 +25,7 @@
     <div class="juan-style vertical" id="verttext">
     <h2>魔誘第四</h2>
         <blockquote>   
-            長戰時代啓，人族康世占半天下，立唐代五十又五年。本談說唐末一官人，因與魔立约使大唐陷害，己家臨災。
+            長戰時代啓，人族康世霸半天下，立唐代五十又五年。本談說唐末一官，因與魔立约使大唐陷害，己家臨災。
         </blockquote>
         <p>
             長戰時代，康唐霸天下，竹帳郡有一學者，姓古名慈，字子憐。慈求學於金流書院，熟讀史經，則久未考秀才，家財卻用盡。時離春舉二月，慈苦何考過，一夜間卻聽聞一語在耳邊曰：「吾乃七炎宮之師也，見君之苦不由而憐，已知君之才華，只可惜時時科舉遇惡運。」慈突立起，驚呼：「何人矣？」只見案前現出一巫師，一身黑帛，目中魔焰，甚是邪惡。慈急退，卻聞其和音道：「請恕貧道無禮，只是不知安與君談！外世惡我，我卻未得罪誰，然不得而夜來見君，望君且聽我話，非之我即去君。」
@@ -37,19 +37,19 @@
             慈久不語，終不逃而曰：「汝無償助我？」果魔巫笑而搖頭，「天下孰無價？只願收三諾耳。若今不秀才，三不進士，五不大夫，當我無能，自不還。」又久不語，重思之，然思唐霸半天下，當其大夫，千金之祿，雖明知其魔也，仍難以拒，終曰可。只見魔巫邪然而笑曰：「善哉！君且休息，自今勿連夜讀書，保重貴身，時至春舉，貧道來助。」遂沒入影中。
         </p>
         <p>
-            慈從其言，重注養身，至春舉前夜，魔巫又訪，予一珠曰：「是謂百才珠，取百才人之知，君食之，萬題不懼。」慈從之，珠進腹中則目前恍惚，智如水沖入心中。翌日往考，三日不反，終歸而力盡，心則勃勃。巫座於案邊道：「何如？」慈曰善哉，此考必通也。果得案首，遂備考舉人。
+            慈從其言，重注養身，至春舉前夜，魔巫又訪，予一珠曰：「是謂百才珠，取百才人之知，君食之，萬題不懼。」慈從之，珠進腹中則目前恍惚，智如水沖入心中。翌日往考，三日不反，終歸而力盡，心則勃勃。巫座於案邊道：「何如？」慈曰善哉，此考必通也。果得案首，遂備考舉人。年間仍若學，不偷偷泄其與魔之交也，時又立春，備考舉人。巫又來，予一千才珠，慈又食之而孕識，果考解元，衆嘆其才。
         </p>
         <p>
-            遂往唐都長臨考進士，在都居兩年。三年至，又到春，果巫又訪之曰：「是次貧道將給君一萬才珠，然即知非必得進士，故為君熬羹，謂之詩人粥，雖然苦澀，請飲之。慈從之，果有異味，似肉，又不似肉，又似灰，又稠如膠。慈勉飲之，後食萬才珠而眠。是夜腹痛難忍，夢其行被示而受誅，然覺而無恙。遂往宮參考，竟得狀元，為大唐之道，遂事於戶部，受唐君之喜，果二年命為尚書，成顯官，收千金俸，古家興。
+            遂往唐都長臨考進士，在都居兩年。三年至，又到春，果巫又訪之曰：「是次貧道將給君一萬才珠，然即知非必得進士，故為君熬羹，謂之詩人粥，雖然苦澀，請飲之。」慈從之，果有異味，似肉，又不似肉，又似灰，又稠如膠。慈勉飲之，後食萬才珠而眠。是夜腹痛難忍，夢其行被示而受誅，然覺而無恙。遂往宮參考，竟得狀元，為大唐之首，遂事於戶部，受唐君之喜，果二年命為尚書，成顯官，收千金俸，古家興。
         </p>
         <p>
-            時當尚書五年，巫終來訪曰：「貧道守誓夫？」慈心有警，卻道：「守也。」巫又曰：「吾來而取第一諾。」慈曰：「何諾？巫曰：「願君取一幼兒，不過六歲，獻於貧道。不意其家身，只意其齡。」慈警曰：「師求之為何？」巫則曰：「非君之關也。請速行之，願六月而成。否則大禍哉。」遂沒入影中。慈面難看，然既諾魔不可違之，故以尚書之位暗腐邊官，數月而自刑部得一子，姓劉名平，貧民之身，使祭獻於魔巫。遂內疚而惡夢數月，終而忘之。
+            時當尚書五年，巫終來訪曰：「貧道守誓夫？」慈心有警，卻道：「守也。」巫又曰：「吾來而取第一諾。」慈曰：「何諾？」巫曰：「願君取一幼兒，不過六歲，獻於貧道。不意其家身，只意其齡。」慈警曰：「師求之為何？」巫則曰：「非君之關也。請速行之，願六月而成。否則大禍哉。」遂沒入影中。慈面難看，然既諾魔不可違之，故以尚書之位暗腐邊官，數月而自刑部得一子，姓劉名平，貧民之身，使祭獻於魔巫。遂內疚而惡夢數月，終而忘之。
         </p>
         <p>
             時利朝局立黨成首輔，魔又訪之曰：「願用第二諾。」慈曰可。魔曰：「姦唐虔清郡主，以誣鎮東將軍，使其誅族。貧道予君一藥，可化君身。」慈驚呼：「鎮東將軍唐之重將，重義之人，主持正道，天下鮮如其勇，鮮如其善矣。」魔則曰：「為人守諾。不欲禍家乎？」慈只能曰可而從之。
         </p>
         <p>
-            故慈用其心腹，引鎮東將軍與郡主多見，徐徐造機。一大宴眾醉，在無人處慈擊昏鎮東將軍，將之拽回屋，化身成之返宴，假重醉，深夜引郡主私談，重辱之而留於塵土上，本人則逃。翌日大唐嘩然，虔清郡主告鎮東將軍在宴後辱之。醫者檢之，果不處女。將軍力辯，然無證助之，終為唐君怒誅三族。慈罪惡感許久，夜中難眠。康唐無大將，東界生危。
+            故慈用其心腹，引鎮東將軍與郡主多見，徐徐造機。一大宴衆醉，在無人處慈擊昏鎮東將軍，將之拽回屋，化身成之返宴，假重醉，深夜引郡主私談，重辱之而留於塵土上，本人則逃。翌日大唐嘩然，虔清郡主告鎮東將軍在宴後辱之。醫者檢之，果不處女。將軍力辯，然無證助之，終為唐君怒誅三族。慈罪惡感許久，夜中難眠。康唐無大將，東界生危。
         </p>
         <p>
             時慈長子十二歲，長女九歲，未能再生子。魔又訪之曰：「願取三諾，後永不再訪。」慈怒斥曰：「惡魔哉去！」魔則笑曰：「誓當守也。否則汝禍滔天，而我不必立一指。不再虛言，獻我汝長子古哲。」慈呼不，拔身邊刀而攻魔，可魔身如影，不可觸。魔大笑曰：「三月不成，禍降爾家。」沒入夜中。
