--- a/shxt/saga/6.html
+++ b/shxt/saga/6.html
@@ -27,7 +27,7 @@
         <blockquote>
             古大李未及西域，其地尚晦，故有多傳說。是李代馬川中人一記，言一遊人叙其西域之經也。
         </blockquote>
-        <p>千里之西，燕王治外，荒沙飄飄，秘矣無窮。古邑立焉，郭二十尺寛六十高，赤厚砂石其壘。位於泉北大江下流，以沙域爲其居。太川之民，斯地唯聞遊者而知之，斯狐獨流浪曠天者也。吾真家語謂之砂石。言：地人家之，半人半魔，已居其不知几萬年，骨文石碑亦志之，自遊者之話也，商人之序也，至使者之之古燕朝者也。沙漠語謂之俄琅臘。其民稱己土叻，城郭廣矣，西至夏梭、蘇笠夏，東至昕水西。山外多居地，貿商盛盛，然砂石也，斯邑其最，突兀其宏。城央古廟嵩嵩，赤穹金刹。</p>
+        <p>千里之西，燕王治外，荒沙飄飄，秘矣無窮。古邑立焉，郭寛二十尺高六十，赤厚砂石其壘。位於泉北大江下流，以沙域爲其居。太川之民，斯地唯聞遊者而知之，斯孤獨流浪曠天者也。吾真家語謂之砂石。言：地人家之，半人半魔，已居其不知几萬年，骨文石碑亦志之，自遊者之話也，商人之序也，至使者之之古燕朝者也。沙漠語謂之俄琅臘。其民稱己土叻，城郭廣矣，西至夏梭、蘇笠夏，東至昕水西。山外多居地，貿商盛盛，然砂石也，斯邑其最，突兀其宏。城央古廟嵩嵩，赤穹金刹。</p>
 
 <p>曾遊人来我太川，於我府坐客，言遠國之說。是皇生者，生於寰中，則棄之而以浩天爲家。孤身走遍天地，之盧西、北寒之極，然則莫其見也能於砂石同立。人形其遊斯邑二十又四日，混於土民，行萬彩之市、歡閙之場、清靜之廟，大橋下觀洶湧大江。是美矣震矣，然當不如我皇冠橋也哉！貿業之聖地，市中天下四涯之物皆全於之，自燕人售中州絲珠，至夷人鬻水晶之器，數月苦途而至也，自西之又西，斯若傳中之國。話說極西亦有大國，敢與燕王比，然莫真人、生靈嘗往之。</p>
 
