--- a/shxt/saga/7.html
+++ b/shxt/saga/7.html
@@ -25,7 +25,7 @@
     <div class="juan-style vertical" id="verttext">
     <h2>骨符第七</h2>
         <blockquote>
-            聞、李之間天下不平矣，江室王十又六年而潰。律不百年而崩。然其最者安文之變，律將安文起義於北州，帥其芒炎軍，南伐龍氏，五十年苦戰，終於太川，建漢，十四月而天下又分，止三十又七年方合於李，歸平中原。十四月漢哉，其彩也堪比長戰，永載長史。卻說骨符，莫知其真，有解之云：「考遺籍，其諸苗之真寶也，其文非金爪、真篆之類，必久之。是則釋燕王伐苗之艱；無之苗人安抗萬龍？」(聞、李、江、律、漢，室也。安文，名也。)
+            聞、李之間天下不平矣，江室王十又六年而潰。律不百年而崩。然其最者安文之變，律將安文起義於北州，帥其芒炎軍，南伐龍氏，五十年苦戰，終於太川，建漢，十四月而天下又分，止三十又七年方合於李，歸平中原。十四月漢哉，其彩也堪比長戰，永載長史。卻說骨符，莫知其真，有解之云：「考遺籍，其諸苗之真寶也，其文非金爪、真篆之類，必久之。是則釋燕王伐苗之艱；無之苗人安抗萬龍？」(聞、李、江、律、漢，代也。安文，名也。)
         </blockquote>
         <p>律末，安文變起，諸郡州去朝，芒炎軍虐中州。京兆外鄉有一宋某人，歲六十餘，耕者以生。芒炎軍逼京，其子孫早已棄家西奔，宋翁不隨。</p>
 
