title page changes

--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -36,6 +36,10 @@
         雨神沉睡，暴风暴雨重临人间，肆虐大地。东海深处，魔教抬头，暗流汹涌。雨神不复苏，恐灾难将至。
     </p>
 
+    <p>
+        故东海宗常往陆寻弟，求灰昏之下之有一光焉，其继雨家之脉者，藏于苦苦黎民中。不知何图也，能救天下乎？
+    </p>
+
     <h2>
         目录
     </h2>
