--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -329,6 +329,9 @@
         <li><a href="./story/230.html">Compensation (End of Volume)</a></li>
     </ol>
 
+    <h2 class="c">Volume 2. Unmatched within the Nation</h2>
+    <p class="sub">卷二：国士无双</p>
+
     <hr>
 
     <p>
