--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -329,8 +329,15 @@
         <li><a href="./story/230.html">Compensation (End of Volume)</a></li>
     </ol>
 
-    <h2 class="c">Volume 2. Unmatched within the Nation</h2>
+    <h2 class="c">Volume 2. Unmatched in the Nation</h2>
     <p class="sub">卷二：国士无双</p>
+
+    <ol>
+        <li><a href="./story/231.html">A Gift From the Jianzheng</a></li>
+        <li><a href="./story/232.html">Moving Corpse</a></li>
+        <li><a href="./story/233.html">Rebirth</a></li>
+        <li><a href="./story/234.html">Your Majesty, please grant me death</a></li>
+    </ol>
 
     <hr>
 
