--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -337,6 +337,9 @@
         <li><a href="./story/232.html">Moving Corpse</a></li>
         <li><a href="./story/233.html">Rebirth</a></li>
         <li><a href="./story/234.html">Your Majesty, please grant me death</a></li>
+        <li><a href="./story/235.html">Hengyuan: Three, I've Known Your True Identity Long Ago</a></li>
+        <li><a href="./story/236.html">Autopsy</a></li>
+        <li><a href="./story/237.html">Seeing the Crown Prince</a></li>
     </ol>
 
     <hr>
