--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -340,6 +340,8 @@
         <li><a href="./story/235.html">Hengyuan: Three, I've Known Your True Identity Long Ago</a></li>
         <li><a href="./story/236.html">Autopsy</a></li>
         <li><a href="./story/237.html">Seeing the Crown Prince</a></li>
+        <li><a href="./story/238.html">The Scene of the Crime</a></li>
+        <li><a href="./story/239.html">A Great Breakthrough</a></li>
     </ol>
 
     <hr>
