--- a/dagengren/story/235.html
+++ b/dagengren/story/235.html
@@ -289,7 +289,7 @@ She leaned forward, resting her chin in her hand, and listened intently.
 
 Xu Qi'an discreetly glanced at the princess's chest and couldn't help feeling a bit disappointed. Compared to her elder sister, Lin'an was still lacking.
 
-A woman who can't make the table bear the pressure wasn't a good woman.
+A woman who couldn't make the table bear the pressure wasn't a good woman.
 
 When she heard about the female ghost trying to seduce Xu Qi'an and his companions, with two of his colleagues falling under her spell while Xu Qi'an resisted through sheer willpower, Biaobiao expressed her admiration, praising him: "As expected of someone I value highly. When I first saw you, I knew you were no ordinary person."
 
