--- a/shxt/saga/6.html
+++ b/shxt/saga/6.html
@@ -31,7 +31,7 @@
 
 <p>曾遊人来我太川，於我府坐客，言遠國之說。是皇生者，生於寰中，則棄之而以浩天爲家。孤身走遍天地，之盧西、北寒之極，然則莫其見也能於砂石同立。人形其遊斯邑二十又四日，混於土民，行萬彩之市、歡閙之場、清靜之廟，大橋下觀洶湧大江。是美矣震矣，然當不如我皇冠橋也哉！貿業之聖地，市中天下四涯之物皆全於之，自燕人售中州絲珠，至夷人鬻水晶之器，數月苦途而至也，自西之又西，斯若傳中之國。話說極西亦有大國，敢與燕王比，然莫真人、生靈嘗往之。</p>
 
-<p>其言：一夜商休，坐於市外，觀夕光閃於琉璃磚路，曾有女至，其目赤若炎、面透若燕人，問遊者何坐於此。回曰是時地至靜，天至晴，夕而砂石之石最燦爛矣。女則笑，示其隨，徑走巷弄無數，上邑中之丘，直至大廟門下。則見大邑連綿展於前，赤日沒之於明豔之光，若祖神之火。是而笑之曰：斯人也不若他，似能知己見真。坐於廟外，女人謂之問曰：若君之天舞家，安同凡人行，而不太空走？</p>
+<p>其言：一夜商休，坐於市外，觀夕光閃於琉璃磚路，曾有女至，其目赤若炎、面秀若燕人，問遊者何坐於此。回曰是時地至靜，天至晴，夕而砂石之石最燦爛矣。女則笑，示其隨，徑走巷弄無數，上邑中之丘，直至大廟門下。則見大邑連綿展於前，赤日沒之於明豔之光，若祖神之火。是而笑之曰：斯人也不若他，似能知己見真。坐於廟外，女人謂之問曰：若君之天舞家，安同凡人行，而不太空走？</p>
 
 <p>遊人好斯名，天舞家也，流易如風，未嘗長落，可砂石於其心中重，不平而常懷之，於萬沙之皇中，火紅高塔求靜。明斯人去我府，乘風離太川，往西北之邑。</p>
     </div>
