--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -342,6 +342,8 @@
         <li><a href="./story/237.html">Seeing the Crown Prince</a></li>
         <li><a href="./story/238.html">The Scene of the Crime</a></li>
         <li><a href="./story/239.html">A Great Breakthrough</a></li>
+        <li><a href="./story/240.html">Xu Pingzhi: You Two Wait</a></li>
+        <li><a href="./story/241.html">Xu Lingyin's Anger</a></li>
     </ol>
 
     <hr>
