--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -344,6 +344,7 @@
         <li><a href="./story/239.html">A Great Breakthrough</a></li>
         <li><a href="./story/240.html">Xu Pingzhi: You Two Wait</a></li>
         <li><a href="./story/241.html">Xu Lingyin's Anger</a></li>
+        <li><a href="./story/242.html">Big Bwother, Am I Your Little Sweetheart</a></li>
     </ol>
 
     <hr>
