--- a/dagengren/story/242.html
+++ b/dagengren/story/242.html
@@ -589,7 +589,7 @@ Xu Lingyin's eyes sparkled with excitement, thinking her big brother was indeed 
 
 *Although, you might end up being scolded half to death by your mother.*
 
-"Big brother, am I your little sweetheart?" Xu Lingyin asked.
+"Big bwother, am I your little sweetheart?" Xu Lingyin asked.
 
 Xu Qi'an was surprised, "Where did that come from? You’re blunter than big brother."
 
