--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -345,6 +345,8 @@
         <li><a href="./story/240.html">Xu Pingzhi: You Two Wait</a></li>
         <li><a href="./story/241.html">Xu Lingyin's Anger</a></li>
         <li><a href="./story/242.html">Big Bwother, Am I Your Little Sweetheart</a></li>
+        <li><a href="./story/243.html">Wei Yuan's Astonishment</a></li>
+        <li><a href="./story/244.html">Woman’s Corpse</a></li>
     </ol>
 
     <hr>
