--- a/dagengren/story/242.html
+++ b/dagengren/story/242.html
@@ -43,7 +43,7 @@ The two servants glared at everyone, focusing on Mr. Li, and shouted, “Which l
 
 Mr. Li coughed and calmly said, “This is a misunderstanding. Please take him home first, and I will personally visit later.”
 
-He planned to wait for Xu Lingyin’s family to arrive, then discuss going to the residence to apologize.
+He planned to wait for Xu Lingyin’s family to arrive, then discuss going to the residence to apologise.
 
 He intended to mediate and resolve the matter peacefully.
 
@@ -71,7 +71,7 @@ At this point, the servants finally noticed Mr. Li subtly blocking a little girl
 
 The little girl, plain and not particularly clever-looking, was the last person they’d suspect of being the culprit.
 
-However, upon realizing it, the servant noticed the girl’s sturdy physique, round face, round belly, and round hands and feet.
+However, upon realising it, the servant noticed the girl’s sturdy physique, round face, round belly, and round hands and feet.
 
 A bundle of strength…
 
@@ -449,7 +449,7 @@ As a constable in the city’s police force, he often assisted the chief constab
 
 The Zhao couple's expressions changed instantly.
 
-Although they didn't recognize the golden token, the head constable's reaction served as the best reference.
+Although they didn't recognise the golden token, the head constable's reaction served as the best reference.
 
 *Weren't the elders in the family said to be a Baihu in the Imperial Guards? What's going on? Does this kid have a high status? Why didn't he say so earlier?*
 
@@ -501,7 +501,7 @@ After they left, Mr. Li reflected on his earlier actions, feeling somewhat relie
 
 He felt incredibly fortunate for his fair treatment and lack of bias towards the Zhao family, otherwise, his reputation and life might have been forfeit.
 
-With this realization, he looked at Constable Zhu with a gaze full of pity.
+With this realisation, he looked at Constable Zhu with a gaze full of pity.
 
 …
 
@@ -599,7 +599,7 @@ Little Pea replied, "Last night, I heard Dad call Mom 'sweetheart,' but no one e
 
 Little Pea looked disappointed, "Then what am I?"
 
-Xu Qi'an lowered his head, scrutinizing his chubby little sister, "You're a fatty sweetheart."
+Xu Qi'an lowered his head, scrutinising his chubby little sister, "You're a fatty sweetheart."
 
 …
 
