--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -347,6 +347,7 @@
         <li><a href="./story/242.html">Big Bwother, Am I Your Little Sweetheart</a></li>
         <li><a href="./story/243.html">Wei Yuan's Astonishment</a></li>
         <li><a href="./story/244.html">Woman’s Corpse</a></li>
+        <li><a href="./story/245.html">Huang Xiaorou</a></li>
     </ol>
 
     <hr>
