--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -346,8 +346,10 @@
         <li><a href="./story/241.html">Xu Lingyin's Anger</a></li>
         <li><a href="./story/242.html">Big Bwother, Am I Your Little Sweetheart</a></li>
         <li><a href="./story/243.html">Wei Yuan's Astonishment</a></li>
-        <li><a href="./story/244.html">Woman’s Corpse</a></li>
+        <li><a href="./story/244.html">A Woman's Body</a></li>
         <li><a href="./story/245.html">Huang Xiaorou</a></li>
+        <li><a href="./story/246.html">Daoist Jinlian: Let Xu Qi'an Deal With It</a></li>
+        <li><a href="./story/247.html">Heart Sword</a></li>
     </ol>
 
     <hr>
