--- a/dagengren/story/244.html
+++ b/dagengren/story/244.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="double" id="double">
-# 244. Woman’s Corpse
+# 244. A Woman's Body
 
 Xu Qi'an didn’t wait for Wei Yuan’s response; instead, he first encountered the Gold Gongs. Powerful presences appeared on the seventh floor, and among them were two familiar faces.
 
