--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -350,6 +350,8 @@
         <li><a href="./story/245.html">Huang Xiaorou</a></li>
         <li><a href="./story/246.html">Daoist Jinlian: Let Xu Qi'an Deal With It</a></li>
         <li><a href="./story/247.html">Heart Sword</a></li>
+        <li><a href="./story/248.html">Assassination Attempt</a></li>
+        <li><a href="./story/249.html">Court Assembly</a></li>
     </ol>
 
     <hr>
