--- a/dagengren/story/248.html
+++ b/dagengren/story/248.html
@@ -149,7 +149,7 @@ His mare trotted down the empty streets as Xu Qi'an contemplated the threads of 
 
 *Yes, to convict the Empress, more evidence is needed.*
 
-*Nanny Rong was right; the secrets in this deep palace are too many. Once you step in, you can't pull yourself out. I thought this case would take some time, but I didn't expect it to progress so quickly. Now I don't even have the chance to drag it out. Damn it, Yuanjing Emperor still hasn't issued the decree to grant me a title. I'll request leave tomorrow.*
+*Nanny Rong was right; the secrets in this deep palace are too many. Once you step in, you can't pull yourself out. I thought this case would take some time, but I didn't expect it to progress so quickly. Now I don't even have the chance to drag it out. Damn it, Emperor Yuanjing still hasn't issued the decree to grant me a title. I'll request leave tomorrow.*
 
 At that moment, a picture formed in Xu Qi'an's mind: to his left, a black-clad figure crouched behind the roof ridge, and to his right, another black-clad figure was similarly hidden.
 
