--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -352,6 +352,8 @@
         <li><a href="./story/247.html">Heart Sword</a></li>
         <li><a href="./story/248.html">Assassination Attempt</a></li>
         <li><a href="./story/249.html">Court Assembly</a></li>
+        <li><a href="./story/250.html">Brainstorming</a></li>
+        <li><a href="./story/251.html">Common Medical Knowledge</a></li>
     </ol>
 
     <hr>
