--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -88,6 +88,10 @@
         <li><a href="./story/39.html">【老竹村】</a></li>
         <li><a href="./story/40.html">【再见谢颜】</a></li>
         <li><a href="./story/41.html">【金表】</a></li>
+        <li><a href="./story/42.html">【心如止水】</a></li>
+        <li><a href="./story/43.html">【半年在李】</a></li>
+        <li><a href="./story/44.html">【冬至】</a></li>
+        <li><a href="./story/45.html">【姚师宝书】</a></li>
     </ol>
 
 </div>
