--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -51,6 +51,10 @@
         <i>Translators: Daoist Yan, Infernal</i>
     </p>
 
+    <p><i>
+        Also called: Nightwatcher, Great Feng's Nightwatcher, Dafeng's Night Squad
+    </i></p>
+
     <div class="collapsible side">
             Pinyin/Romanisation note
        
@@ -354,6 +358,9 @@
         <li><a href="./story/249.html">Court Assembly</a></li>
         <li><a href="./story/250.html">Brainstorming</a></li>
         <li><a href="./story/251.html">Common Medical Knowledge</a></li>
+        <li><a href="./story/252.html">The Truth</a></li>
+        <li><a href="./story/253.html">Take a Door to the Face</a></li>
+        <li><a href="./story/254.html">She Wasn't Lying</a></li>
     </ol>
 
     <hr>
