--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -361,6 +361,8 @@
         <li><a href="./story/252.html">The Truth</a></li>
         <li><a href="./story/253.html">Take a Door to the Face</a></li>
         <li><a href="./story/254.html">She Wasn't Lying</a></li>
+        <li><a href="./story/255.html">Frank Admissions</a></li>
+        <li><a href="./story/256.html">Xu Qi'an: I've Contributed Again</a></li>
     </ol>
 
     <hr>
