--- a/dagengren/story/256.html
+++ b/dagengren/story/256.html
@@ -31,7 +31,7 @@
 
 "Ice" slowly crept onto Noble Consort Chen's face—her expression, her gaze, and her tone of voice all turned cold.
 
-"Would you look at that," Xu 's shrugged and sneered, "No matter how sweetly someone paints a picture, the moment real payment is required, they immediately turn hostile."
+"Would you look at that," Xu Qi'an shrugged and sneered, "No matter how sweetly someone paints a picture, the moment real payment is required, they immediately turn hostile."
 
 *Good thing you didn't agree—otherwise, I'd rather see Lin'an heartbroken than let you win.*
 
@@ -45,13 +45,13 @@ Noble Consort Chen's expression stiffened, and her grip on the teacup tightened.
 
 "So, Sir Xu intends to take Lang'er away from Jingxiu Palace and bring us down?"
 
-Noble Consort Chen's beautiful eyes locked onto Xu 's. The atmosphere in the room dropped to freezing, and a deadly pressure enveloped him.
+Noble Consort Chen's beautiful eyes locked onto Xu Qi'an. The atmosphere in the room dropped to freezing, and a deadly pressure enveloped him.
 
-Though Xu 's, at his Refining Spirit level, couldn't detect the exact moment of danger, the instincts of a seventh-rank martial artist screamed: Danger!
+Though Xu Qi'an, at his Refining Spirit level, couldn't detect the exact moment of danger, the instincts of a seventh-rank martial artist screamed: Danger!
 
-*If I insist on taking Lang'er, it's be a mutual destruction—Noble Consort Chen will have no choice but to throw caution to the wind. She won"t care that this is the harem and will strike at me. My life wouldn"t be guaranteed... Though I still have Master Shenshu as a last resort..*. Xu 's smirked, straightening his posture with a look of disdain.
+*If I insist on taking Lang'er, it's be a mutual destruction—Noble Consort Chen will have no choice but to throw caution to the wind. She won't care that this is the harem and will strike at me. My life wouldn't be guaranteed... Though I still have Master Shenshu as a last resort..*. Xu Qi'an smirked, straightening his posture with a look of disdain.
 
-"I, Xu 's, once faced thousands of rebels alone, cut down thousands of enemies, and remained standing even in death. Does Madam think a mere threat would scare me?
+"I, Xu Qi'an, once faced thousands of rebels alone, cut down thousands of enemies, and remained standing even in death. Does Madam think a mere threat would scare me?
 
 "A servant fears not death. How could one intimidate me with it?"
 
@@ -59,65 +59,65 @@ Though Xu 's, at his Refining Spirit level, couldn't detect the exact moment of 
 
 The consort tightened her grip on the cup, as if ready to smash it as a signal.
 
-Suddenly, Xu 's said loudly, "But my heart is sincere towards Lin'an. I do not wish to see her heartbroken. I can pretend today's events never happened."
+Suddenly, Xu Qi'an said loudly, "But my heart is sincere towards Lin'an. I do not wish to see her heartbroken. I can pretend today's events never happened."
 
-*Even if I plan to expose the consort, I must first make sure I walk out of Jingxiu Palace alive…* Xu 's thought with regret.
+*Even if I plan to expose the consort, I must first make sure I walk out of Jingxiu Palace alive…* Xu Qi'an thought with regret.
 
-Noble Consort Chen studied him for a moment, then set down her teacup, nodding with satisfaction. "You"re not lying. It seems you truly care for Lin'an. If that's the case, why not join us?"
+Noble Consort Chen studied him for a moment, then set down her teacup, nodding with satisfaction. "You're not lying. It seems you truly care for Lin'an. If that's the case, why not join us?"
 
 *Do you take me for a fool? If I join you, I'm as good as dead. In the capital, the only person I can rely on is Duke Wei. Even Princess Huaiqing can only be trusted halfway. As for Lin'an, she's just a powerless princess—there's no way she could protect me.*
 
 "Madam, one does not win loyalty with empty promises but through tangible actions. I serve Duke Wei because he treats me with sincerity. I trust him."
 
-With that, Xu 's turned slightly, casting a glance at the eunuch waiting outside the courtyard. "It's not that I am helpless against Madam, but I don"t think Madam can do much to me either."
+With that, Xu Qi'an turned slightly, casting a glance at the eunuch waiting outside the courtyard. "It's not that I am helpless against Madam, but I don't think Madam can do much to me either."
 
-Once the mutual destruction scenario was off the table, Noble Consort Chen wouldn"t dare push him further.
+Once the mutual destruction scenario was off the table, Noble Consort Chen wouldn't dare push him further.
 
 Though the eunuch was just a lackey, he was currently Emperor Yuanjing's eyes, serving as surveillance. Everything that happened here would be reported to the emperor without fail.
 
-Unless Noble Consort Chen killed him outright, any plot or scheme against Xu 's would be useless—the eunuch could testify on his behalf.
+Unless Noble Consort Chen killed him outright, any plot or scheme against Xu Qi'an would be useless—the eunuch could testify on his behalf.
 
-That was precisely why Xu 's had insisted the eunuch stay.
+That was precisely why Xu Qi'an had insisted the eunuch stay.
 
 Noble Consort Chen took a long, deep look at him, her beautiful eyes narrowing. "We are tired. You may leave... The doors of Jingxiu Palace will always be open for you."
 
 "Your servant takes his leave."
 
-Xu 's cupped his hands and bowed before exiting the room.
+Xu Qi'an cupped his hands and bowed before exiting the room.
 
 As he stepped into the courtyard, the eunuch hurried over. "Sir Xu, what did the Noble Consort say to you?"
 
-"Don"t ask. If you do, you's lose your head," Xu 's replied irritably.
+"don't ask. If you do, you'll lose your head," Xu Qi'an replied irritably.
 
 The eunuch's face turned pale.
 
 In the outer courtyard, Lin'an sat in a pavilion, resting her chin in her hand while idly toying with a teacup. Two palace maids stood by her side.
 
-Upon seeing Xu 's, her round face lit up with a radiant smile. Her almond-shaped eyes curved into crescent moons as she waved and called out in a sweet voice, "Running Dog, come here!"
+Upon seeing Xu Qi'an, her round face lit up with a radiant smile. Her almond-shaped eyes curved into crescent moons as she waved and called out in a sweet voice, "Running Dog, come here!"
 
 There was no authority behind her words—she sounded more like she was pouting.
 
-Xu 's took a deep breath, suppressing the surge of emotions, and forced a smile as he said casually, "Your Highness, I"m back."
+Xu Qi'an took a deep breath, suppressing the surge of emotions, and forced a smile as he said casually, "Your Highness, I'm back."
 
 Lin'an immediately asked, "What did my mother say to you?"
 
-"Her Highness mentioned that you"re nearing the age to be married and asked if I knew of any suitable young talents to recommend. She said she would help find a match for you."
+"Her Highness mentioned that you're nearing the age to be married and asked if I knew of any suitable young talents to recommend. She said she would help find a match for you."
 
 Lin'an blinked, and a faint blush crept across her cheeks. Suspicious, she asked, "Would my mother really say that to you?"
 
-*...Eh, why aren't you falling into my trap? When did you get so clever? I was planning to recommend myself next…* Xu 's had no choice but to say, "I was just joking."
+*...Eh, why aren't you falling into my trap? When did you get so clever? I was planning to recommend myself next…* Xu Qi'an had no choice but to say, "I was just joking."
 
 Lin'an's eyebrows shot up. "Running Dog, how dare you tease us!"
 
 She placed her hands on her hips and glared at him.
 
-"I"m still a child, Your Highness—I don"t even know what teasing means."
+"I'm still a child, Your Highness—I don't even know what teasing means."
 
-Lin'an pouted and playfully tutted, but then found Xu 's's words amusing, laughing with a tinkling sound like a little hen clucking.
+Lin'an pouted and playfully tutted, but then found Xu Qi'an's words amusing, laughing with a tinkling sound like a little hen clucking.
 
 Her laughter was both innocent and alluring, as if she herself was a beautiful scene.
 
-Xu 's laughed along with her, but deep down, he sighed.
+Xu Qi'an laughed along with her, but deep down, he sighed.
 
 Earlier, he had planned to feign ignorance, leave Jingxiu Palace first, and then report his findings to Duke Wei, who could swiftly arrest Lang'er, catching Noble Consort Chen off guard.
 
@@ -125,11 +125,11 @@ But due to Lin'an, he hesitated. Although he remained clear-headed in the end an
 
 *Noble Consort Chen is skilled. As soon as I leave, Lang'er will "fall ill" and die, leaving her with no flaws. This way, Noble Consort Chen will have no more weaknesses to exploit.*
 
-"Noble Consort Chen is indeed a competent royal consort... But Lin'an, this silly girl—growing up within these palace walls, I can"t tell if it's a blessing or a curse."
+"Noble Consort Chen is indeed a competent royal consort... But Lin'an, this silly girl—growing up within these palace walls, I can't tell if it's a blessing or a curse."
 
-Reflecting on Noble Consort Chen's earlier moves, Xu 's had to admit her sharpness. First, she called him to test the waters. Sure enough, she sensed something amiss.
+Reflecting on Noble Consort Chen's earlier moves, Xu Qi'an had to admit her sharpness. First, she called him to test the waters. Sure enough, she sensed something amiss.
 
-Then she laid everything out in a seemingly open-hearted manner, but in truth, she was unafraid because she knew that once Lang'er was dealt with, Xu 's would have no leverage. Moreover, Xu 's wouldn"t be able to take Lang'er with him unless he wanted to die.
+Then she laid everything out in a seemingly open-hearted manner, but in truth, she was unafraid because she knew that once Lang'er was dealt with, Xu Qi'an would have no leverage. Moreover, Xu Qi'an wouldn't be able to take Lang'er with him unless he wanted to die.
 
 Once she realized the threat, she decided to be straightforward, gaining his trust in the process. Then, she dangled the carrot—her beautiful daughter—as bait. *Had I been the lecherous type, I might have fallen right into her trap...*
 
