--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -363,6 +363,8 @@
         <li><a href="./story/254.html">She Wasn't Lying</a></li>
         <li><a href="./story/255.html">Frank Admissions</a></li>
         <li><a href="./story/256.html">Xu Qi'an: I've Contributed Again</a></li>
+        <li><a href="./story/257.html">Inquiry</a></li>
+        <li><a href="./story/258.html">Bring Honour to the Family</a></li>
     </ol>
 
     <hr>
