--- a/dagengren/story/256.html
+++ b/dagengren/story/256.html
@@ -251,7 +251,7 @@ Perhaps, in Wei Yuan’s eyes, the Jianzheng was his greatest political rival. X
 
 *Is Duke Wei indirectly calling the Empress an unreliable teammate?* Xu Qi'an's eyes lit up. It seemed that his earlier efforts in the palace had not been in vain. He might have even contributed.
 
-"Duke Wei, your servant must confess—I took matters into my own hands earlier."
+"Duke Wei, your subordinate must confess—I took matters into my own hands earlier."
 
 Wei Yuan turned and frowned slightly. "What did you do?"
 
